blockml/test/valid/13_filter_expressions/v34/v34_one.view
view: v34_one
table: 1
fields:

- time: created
  timeframes:
  - day_of_week_index
  sql: 111

- time: delivered
  timeframes:
  - day_of_week_index
  sql: 222

- time: ordered
  timeframes:
  - day_of_week_index
  sql: 333

- dimension: dim6
  sql: 600


