blockml/test/errors/02_field/e26/e26.view
view: e26
table: 1
fields:
- dimension: address      
  sql: 1

- measure: address       
  sql: 1
